[FIX] web_editor: restore background and foreground color previews again
This was fixed in 13.0 and forward-ported twice in 14.0 with [1] and [2]
But the combination of the two commit were messed up.

[1]: https://github.com/odoo/odoo/commit/225ec35e50b5d71fa795f64cb9a9a6c2ceda7631
[2]: https://github.com/odoo/odoo/commit/19be84634d394f47ceb882c5ddd24585f31b50ae

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -96,16 +96,8 @@ body.editor_enable.editor_has_snippets {
             .note-back-color-preview {
                 margin-left: $-text-tools-gap;
             }
-            .btn {
-
-                > .caret {
-                    display: block;
-                    @include o-position-absolute(auto, 0, 0, 0);
-                    border-bottom: 2px solid transparent;
-                }
-                &::after {
-                    display: none;
-                }
+            .btn::after {
+                display: none;
             }
         }
         &.note-style {
